# glyr

./: .clang_complete  .cmd_args.html.swo  .gitignore  .ruby_example.html.swp  AUTHORS  CAPI  CHANGELOG  CMakeLists.txt  Dockerfile  Makefile  Makefile.fallback  README  README.textile  TODO  _config.yml  build-docker.sh  cmake_uninstall.cmake  cmake_uninstall.cmake.in  cmd_args.html  cmd_args.textile  glyr_config.h  index.html  libglyr.pc.in  libglyr_doxygen.conf  ruby_example.html  session.vim  state_of_providers.txt  version.html
_includes/: post.html
_layouts/: default.html
_plugins/: generate_sitemap.rb  revision_tags.rb
debian/: changelog  control  copyright  libglyr-dev.install  libglyr1.symbols  rules
doc/: Makefile  Makefile.am  Makefile.in  README.textile  build_doc.rb  libglyr-decl.txt  libglyr-sections.txt  libglyr-undocumented.txt  libglyr.sgml  test-decl-list.txt  test-decl.txt  test-decl.txt.bak  test-docs.sgml  test-sections.txt  test-undocumented.txt  test-unused.txt
glubyr/: Makefile  extconf.rb  glubyr.c
gui/: glubyr.rb  gtklyr.rb  guilyr.rb  main.glade
lang/: CMakeLists.txt
lang/ruby/: glubyr.rb
lbindings/: CMakeLists.txt  README  glyr.i
lbindings/ruby/: .glubyr.rb.swp  glubyr.rb
lib/: .glyr.h.swp  .types.h.swm  .types.h.swp  CMakeLists.txt  Makefile  README  ainfo.c  ainfo.h  albumlist.c  albumlist.c~  albumlist.h  albumlist.h~  apikeys.h  blacklist.c  blacklist.h  books.c  books.h  cache.c  cache.h  cache_intern.c  cache_intern.h  cmake_install.cmake  config.h  config.h.in  core.c  core.h  cover.c  cover.h  glyr.c  glyr.h  lyrics.c  lyrics.h  main.c  md5.c  md5.h  misc.c  misc.h  photos.c  photos.h  register_plugins.c  (+25 more)
lib/ainfo/: allmusic_com.c  allmusic_com.h  lastfm.c  lastfm.h  lyricsreg.c  lyricsreg.h  wikipedia.c  wikipedia.c~  wikipedia.h
lib/albumlist/: musicbrainz.c  musicbrainz.c~  musicbrainz.h
lib/books/: dnb.c  dnb.h  kit.c  kit.h
lib/cache/: cache.c  cache.h  commands.sql  db_provider.c
lib/cover/: albumart.c  albumart.h  allcdcovers.c  allcdcovers.h  allmusic_com.c  allmusic_com.h  amazon.c  amazon.h  coverhunt.c  coverhunt.h  discogs.c  discogs.h  google.c  google.h  last_fm.c  last_fm.h  lyricswiki.c  lyricswiki.h
lib/intern/: ainfo.c  albumlist.c  backdrops.c  common.c  common.h  cover.c  generic.c  generic.h  guitartabs.c  lyrics.c  photos.c  relations.c  review.c  similar_artist.c  similar_song.c  similiar_artist.c  similiar_song.c  tags.c  tracklist.c
lib/intern/ainfo/: allmusic_com.c  bbcmusic.c  echonest.c  lastfm.c  lyricsreg.c
lib/intern/albumlist/: musicbrainz.c
lib/intern/backdrops/: htbackdrops.c
lib/intern/cache/: db_provider.c
lib/intern/common/: amazon.c  amazon.h  google.c  google.h  mbid_lookup.c  mbid_lookup.h  musicbrainz.c  musicbrainz.h  picsearch.c  picsearch.h
lib/intern/cover/: albumart.c  allmusic_com.c  amazon.c  amazon.h  coverartarchive.c  coverhunt.c  discogs.c  google.c  google.h  jamendo.c  last_fm.c  last_fm.h  lastfm.c  lastfm.h  lyricswiki.c  musicbrainz.c  picsearch.c  rhapsody.c  slothradio.c
lib/intern/guitartabs/: chordie_com.c  guitaretab.c
lib/intern/lyrics/: chartlyrics.c  darklyrics.c  directlyrics.c  elyrics.c  lipwalk.c  lyrdb.c  lyricsreg.c  lyricstime.c  lyricsvip.c  lyricswiki.c  lyrix_at.c  magistrix.c  metallum.c  metrolyrics.c  songlyrics.c  vagalume.c
lib/intern/musictree/: musictree.c
lib/intern/photos/: bbcmusic.c  discogs.c  flickr.c  google.c  lastfm.c  picsearch.c  rhapsody.c  singerpictures.c
lib/intern/relations/: generated.c  musicbrainz.c
lib/intern/review/: allmusic_com.c  amazon.c  echonest.c  metallum.c
lib/intern/similar_artist/: lastfm.c
lib/intern/similar_song/: lastfm.c
lib/intern/similiar_artist/: lastfm.c
lib/intern/similiar_song/: lastfm.c
lib/intern/tags/: musicbrainz.c  musicbrainz.h
lib/intern/tracklist/: musicbrainz.c
lib/jsmn/: jsmn.c  jsmn.h  jsmn_test.c
lib/lyrics/: darklyrics.c  darklyrics.h  directlyrics.c  directlyrics.h  lipwalk.c  lipwalk.h  lyrdb.c  lyrdb.h  lyricsreg.c  lyricsreg.h  lyricstime.c  lyricstime.h  lyricsvip.c  lyricsvip.h  lyricswiki.c  lyricswiki.h  lyrix_at.c  lyrix_at.h  magistrix.c  magistrix.h  metrolyrics.c  metrolyrics.h  songlyrics.c  songlyrics.h
lib/photos/: flickr.c  flickr.h  google.c  google.h  lastfm.c  lastfm.h
lib/relations/: musicbrainz.c  musicbrainz.h
lib/review/: allmusic_com.c  allmusic_com.h  amazon.c  amazon.h
lib/similiar/: lastfm.c  lastfm.h
lib/similiar_artist/: lastfm.c  lastfm.h
lib/similiar_song/: lastfm.c  lastfm.h
lib/tags/: .musicbrainz.c.swp  musicbrainz.c  musicbrainz.h  musicbrainz.h~
lib/tracklist/: musicbrainz.c  musicbrainz.h
pkg/: PKGBUILD  glyr-git-20110830-1-x86_64.pkg.tar.xz
spec/: README.rst  README.textile  ainfo_spec.rb  albumlist_spec.rb  run.rb  (+13 more)
spec/C/: CMakeLists.txt  check_api.c  check_dbc.c  check_opt.c  test_common.c  test_common.h
src/: CMakeLists.txt  Makefile  README  README.textile  adescr.c  adescr.h  books.c  books.h  cmake_install.cmake  core.c  core.h  cover.c  cover.h  example.c  glyr.c  glyr.h  glyrc  lyrics.c  lyrics.h  main.c  photos.c  photos.h  ping_url.c  simple.c  stringop.c  stringop.h  threads.c  types.h
src/adescr/: lastfm.c  lastfm.h
src/books/: .dnb.c.swp  dnb.c  dnb.h  kit.c  kit.h
src/cover/: albumart.c  albumart.h  amazon.c  amazon.h  coverhunt.c  coverhunt.h  discogs.c  discogs.h  google.c  google.h  last_fm.c  last_fm.h  lyricswiki.c  lyricswiki.h
src/examples/: async_queue.c  dbcache.c  dbtest.c  example.c  exit_signal.c  getinfo.c  musictree.c  rating.c  simple.c  threads.c
src/glyrc/: autohelp.c  autohelp.h  colorprint.c  colorprint.h  escape.c  escape.h  glyrc.c  update.c  update.h
src/lyrics/: darklyrics.c  darklyrics.h  directlyrics.c  directlyrics.h  lyrdb.c  lyrdb.h  lyricsvip.c  lyricsvip.h  lyricswiki.c  lyricswiki.h  lyrix_at.c  lyrix_at.h  magistrix.c  magistrix.h  metrolyrics.c  metrolyrics.c.orig  metrolyrics.h  songlyrics.c  songlyrics.h
src/photos/: flickr.c  flickr.h  lastfm.c  lastfm.h
src/utils/: clean_db.c  guess_lang.c  license.py  ping_url.c
(+288 files in other folders)
