cmake_minimum_required(VERSION 2.8)

SET(SWIG_USE_FILE glyr.i)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(Ruby REQUIRED)
INCLUDE_DIRECTORIES(${RUBY_INCLUDE_PATH})

SET(CMAKE_SWIG_FLAGS "")
#SET_SOURCE_FILES_PROPERTIES(${SWIG_USE_FILE} PROPERTIES CPLUSPLUS ON)
#SET_SOURCE_FILES_PROPERTIES(${SWIG_USE_FILE} PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(glubyr ruby glyr.i)
SWIG_LINK_LIBRARIES(glubyr ${PYTHON_LIBRARIES})
